# lightdm-exec-greeter

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
data/: lightdm-exec-greeter.conf  lightdm-exec-greeter.desktop
debian/: changelog  control  copyright  install  postinst  prerm  rules
src/: config.c  config.h  execgreeter.c  execgreeter.h  main.c
